export const AddAccountModalTestIDs = {
  addAccountModal: 'addAccountModal',
  importOptionsModal: 'importOptionsModal',
  addAccountOption: 'addAccountOption',
  importExistingOption: 'importExistingOption',
};

export const AccountsScreenTestIDs = {
  screen: 'accountsScreen',
  addAccountMenuBtn: 'accountsScreen.addAccountMenuBtn',
};
