export const CreateAccountSetupTestIDs = {
  screen: 'createAccountSetupScreen',
  acountNameInput: 'createAccountSetupScreen.acountNameInput',
  nextBtn: 'createAccountSetupScreen.nextBtn',
  backBtn: 'createAccountSetupScreen.backBtn',
};

export const CreateAccountBackupTestIDs = {
  screen: 'CreateAccountBackupScreen',
  nextBtn: 'CreateAccountBackupScreen.nextBtn',
  skipBtn: 'CreateAccountBackupScreen.skipBtn',
};
